--- a/test-registration-nixar-page1-page2.html
+++ b/test-registration-nixar-page1-page2.html
@@ -34,12 +34,12 @@
 <tr>
 	<td>type</td>
 	<td>css=input[name=password]</td>
-	<td>Genety2525</td>
+	<td>GenetyGenety2525</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>css=input[name=confirm]</td>
-	<td>Genety2525</td>
+	<td>GenetyGenety2525</td>
 </tr>
 <tr>
 	<td>click</td>
