--- a/test-registration-nixar-page1-page2.html
+++ b/test-registration-nixar-page1-page2.html
@@ -28,18 +28,18 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=email]</td>
-	<td>digitorum123123@gmail.com</td>
+	<td>css=input.ng-valid-email</td>
+	<td>vanyavvvd@gmail.com</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=password]</td>
-	<td>GenetyGenety2525</td>
+	<td>css=input[name=&quot;password&quot;]</td>
+	<td>Colourtest55555vvvr</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=confirm]</td>
-	<td>GenetyGenety2525</td>
+	<td>css=input[name=&quot;confirm&quot;]</td>
+	<td>Colourtest55555vvvr</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -48,28 +48,33 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=fullName]</td>
-	<td>Podobedov Dmitriy</td>
+	<td>css=input[name=&quot;fullName&quot;]</td>
+	<td>Dmitriy Shevchenkovvvr</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=companyName]</td>
-	<td>Nika</td>
+	<td>css=input[name=&quot;companyName&quot;]</td>
+	<td>genyvvvr</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=domainName]</td>
-	<td>http://test.com</td>
+	<td>css=input[name=&quot;domainName&quot;]</td>
+	<td>http://genisvvvr.com</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>css=input.ng-isolate-scope</td>
-	<td>Proriznyi Ln, Sumy, Sums'ka oblast, Ukraine</td>
+	<td>Simsonstraße 9, 04107 Leipzig, Germany</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=input[name=&quot;phoneNumber&quot;]</td>
+	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=input[name=phoneNumber]</td>
-	<td>+380 66 011 24 55</td>
+	<td>css=input[name=&quot;phoneNumber&quot;]</td>
+	<td>+380 66 011 88 59</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -78,7 +83,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=button.md-button</td>
+	<td>css=button</td>
 	<td></td>
 </tr>
 </tbody></table>
